# Real-Time-Anti-Money-Laundering-Detection

./: .gitignore  404.html  Dockerfile  README-en.md  README.md  docker-compose.yml  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
ARCHITECTURE/: index.html
DATASET/: index.html
configs/: dataset.yaml
docs/: API.md  ARCHITECTURE.md  DATASET.md  ML_SYSTEM_DESIGN.md  MONITORING.md  RETRAINING.md  RUNBOOK.md  index.md
notebooks/: 01_eda.ipynb  02_baseline_model.ipynb  02_model.ipynb  02_model_for_stacking.ipynb
search/: search_index.json
src/aml/: __init__.py
src/aml/api/: app.py
src/aml/application/: __init__.py  use_cases.py  verdict_policy.py
src/aml/config/: __init__.py  constants.py  settings.py
src/aml/contracts/: __init__.py  runtime.py
src/aml/data/: __init__.py
src/aml/eval/: time_split.py
src/aml/evaluating/: __init__.py  metrics.py  time_split.py
src/aml/features/: __init__.py  dtype_downcasting.py  encoding.py  feature_pipeline.py  json_extractor.py  kfold_target_encoder.py  nested_time_loo_encoder.py
src/aml/generation/: __init__.py  synthetic.py
src/aml/inference/: __init__.py  bundle.py  reasons.py  service.py
src/aml/infrastructure/: __init__.py  clickhouse_sink.py  kafka_bus.py  mlflow_tracker.py  redis_feature_store.py
src/aml/models/: __init__.py  build_model.py
src/aml/monitoring/: __init__.py  logging.py  metrics.py
src/aml/persistence/: __init__.py  model_persistence.py
src/aml/pipelines/: __init__.py  build_model.py  feature_pipeline.py
src/aml/preprocessing/: __init__.py  dtype_downcasting.py  json_extractor.py
src/aml/runtime/: __init__.py  bootstrap.py  kafka_worker.py  monitoring_report.py  replay.py  smoke_test.py  spark_streaming.py
src/aml/storage/: __init__.py  composite_repository.py  postgres_repository.py  sqlite_repository.py
src/aml/training/: __init__.py  __main__.py  optuna_tuning.py
src/features/: dtype_downcasting.py  json_extractor.py
