[project]
name = "aml"
version = "0.1.0"
description = "Real Time Anti-Money-Laundering (AML) Detection"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.1",
    "scikit-learn==1.7.1",
    "optuna",
    "xgboost==3.0.3",
    "lightgbm==4.6.0",
    "catboost",
    "matplotlib==3.10.5",
    "seaborn==0.13.2",
    "fastapi",
    "uvicorn",
    "mlflow",
    "evidently",
    "kafka-python",
    "confluent-kafka",
    "category-encoders",
    "joblib",
    "python-dotenv",
    "pyyaml",
    "pyspark==3.5.2",
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "clickhouse-connect>=0.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aml-train-optuna = "aml.training.optuna_tuning:main"
aml-train = "aml.training.optuna_tuning:main"
aml-serve = "aml.api.app:main"
aml-generate = "aml.generation.synthetic:main"
aml-replay = "aml.runtime.replay:main"
aml-monitor-report = "aml.runtime.monitoring_report:main"
aml-smoke-test = "aml.runtime.smoke_test:main"
aml-kafka-worker = "aml.runtime.kafka_worker:main"
aml-spark-stream = "aml.runtime.spark_streaming:main"

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "pytest",
    "ruff",
    "black"
]
